--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-21-node-share-links.htm" title="「10月21日」最高速度18.1M/S，2025年Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「10月21日」最高速度18.1M/S，2025年Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-free-clash-subscribe.htm" title="「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-19-free-clash-subscribe.htm" title="「10月19日」最高速度22.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月19日」最高速度22.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-shadowrocket-node.htm" title="「10月3日」最高速度22.6M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月3日」最高速度22.6M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-node-subscribe.htm" title="「11月1日」最高速度21.3M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「11月1日」最高速度21.3M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="「10月25日」最高速度19.5M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「10月25日」最高速度19.5M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-v2ray-subscribe.htm" title="「11月10日」最高速度18.6M/S，2025年Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「11月10日」最高速度18.6M/S，2025年Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-node-share-links.htm" title="「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-9-free-node-subscribe-links.htm" title="「11月9日」最高速度19.4M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接">「11月9日」最高速度19.4M/S，2025年Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-free-shadowrocket-node.htm" title="「10月18日」最高速度19M/S，2025年V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「10月18日」最高速度19M/S，2025年V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-free-shadowrocket-node.htm" title="「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接">「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-24-free-v2ray.htm" title="「10月24日」最高速度22.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「10月24日」最高速度22.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share-links.htm" title="「10月20日」最高速度20.1M/S，2025年SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「10月20日」最高速度20.1M/S，2025年SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-clash-node-daily-updates.htm" title="「10月12日」最高速度21.7M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接">「10月12日」最高速度21.7M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-clash-node-daily-updates.htm" title="「10月13日」最高速度20.3M/S，2025年Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「10月13日」最高速度20.3M/S，2025年Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-node-subscribe.htm" title="「10月7日」最高速度20.9M/S，2025年Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接">「10月7日」最高速度20.9M/S，2025年Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-clash-node.htm" title="「10月15日」最高速度18.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月15日」最高速度18.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-3-clash-node-daily-updates.htm" title="「11月3日」最高速度20.3M/S，2025年SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「11月3日」最高速度20.3M/S，2025年SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-node.htm" title="「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
