--- a/free-nodes/2025-11-3-clash-node-daily-updates.htm
+++ b/free-nodes/2025-11-3-clash-node-daily-updates.htm
@@ -146,14 +146,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>WinXray 的系统代理模式有哪些？</h5></div>
+    <div class="panel-heading"><h5>如何优化 Clash DNS 解析速度？</h5></div>
     <div class="panel-body">
-        WinXray 支持三种系统代理模式：全局、直连和 PAC 模式。全局模式代理所有流量；直连模式跳过代理；PAC 模式根据规则文件智能判断是否走代理。<hr />    </div>
+        可在配置文件中启用 fake-ip 模式或使用高质量的 DoH 服务（如 Cloudflare、AliDNS）。同时将 `fallback-filter.geoip` 设置为 true，避免国内域名被错误解析到境外，提高解析效率。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Surfboard 如何结合规则屏蔽广告？</h5></div>
+    <div class="panel-heading"><h5>Mellow 的 TUN 模式与 SOCKS5 代理区别是什么？</h5></div>
     <div class="panel-body">
-        Surfboard 可通过规则文件匹配广告域名或 URL，并将其重定向或阻断。结合策略组自动更新规则，可实现广告屏蔽，提高浏览体验和节省带宽。<hr />    </div>
+        TUN 模式拦截系统 IP 层流量，实现全局代理；SOCKS5 代理通常只影响特定应用。TUN 更适合全局加速、游戏和视频应用，保证所有流量走节点，提高网络稳定性和速度。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Sing-box 是否支持多出口自动选择？</h5></div>
@@ -161,9 +161,29 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         支持。通过配置路由规则和策略组，Sing-box 可以自动判断流量类型并选择最佳出口，实现智能分流和多节点负载均衡，提高访问效率。<hr />    </div>
 </div>
 <div class="panel panel-default">
+    <div class="panel-heading"><h5>QuantumultX 的脚本功能能实现哪些高级操作？</h5></div>
+    <div class="panel-body">
+        QuantumultX 支持 JavaScript 脚本，可用于请求重写、数据修改、自动签到、广告拦截等功能。用户可通过脚本中心导入开源脚本，极大增强应用的灵活性与自动化能力。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>WinXray 的系统代理模式有哪些？</h5></div>
+    <div class="panel-body">
+        WinXray 支持三种系统代理模式：全局、直连和 PAC 模式。全局模式代理所有流量；直连模式跳过代理；PAC 模式根据规则文件智能判断是否走代理。<hr />    </div>
+</div>
+<div class="panel panel-default">
     <div class="panel-heading"><h5>VMess AEAD 加密如何确保数据传输安全？</h5></div>
     <div class="panel-body">
         AEAD 加密可防止数据篡改、重放攻击和流量特征泄露。在高封锁环境中保证节点可用，提升数据安全和连接稳定性，降低被检测风险，确保长期安全访问体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Mellow 的 TUN 模式与系统代理有何区别？</h5></div>
+    <div class="panel-body">
+        TUN 模式拦截系统 IP 层流量，实现全局代理，而系统代理通常只影响支持代理的应用。TUN 更适合游戏、视频和全局科学上网场景，保证所有流量通过节点，提高稳定性和速度。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Surfboard 如何结合规则屏蔽广告？</h5></div>
+    <div class="panel-body">
+        Surfboard 可通过规则文件匹配广告域名或 URL，并将其重定向或阻断。结合策略组自动更新规则，可实现广告屏蔽，提高浏览体验和节省带宽。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Netch 可以做什么？</h5></div>
@@ -173,27 +193,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Hysteria2 在丢包环境下如何配置更稳？</h5></div>
     <div class="panel-body">
-        可调整 Hysteria2 的拥塞控制与重传参数，启用 FEC（前向纠错）并合理设置 MTU 与窗口大小以适应链路特性。还可尝试切换 QUIC 参数或更换中转以减少丢包影响。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Mellow 的 TUN 模式与系统代理有何区别？</h5></div>
-    <div class="panel-body">
-        TUN 模式拦截系统 IP 层流量，实现全局代理，而系统代理通常只影响支持代理的应用。TUN 更适合游戏、视频和全局科学上网场景，保证所有流量通过节点，提高稳定性和速度。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Mellow 的 TUN 模式与 SOCKS5 代理区别是什么？</h5></div>
-    <div class="panel-body">
-        TUN 模式拦截系统 IP 层流量，实现全局代理；SOCKS5 代理通常只影响特定应用。TUN 更适合全局加速、游戏和视频应用，保证所有流量走节点，提高网络稳定性和速度。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>如何优化 Clash DNS 解析速度？</h5></div>
-    <div class="panel-body">
-        可在配置文件中启用 fake-ip 模式或使用高质量的 DoH 服务（如 Cloudflare、AliDNS）。同时将 `fallback-filter.geoip` 设置为 true，避免国内域名被错误解析到境外，提高解析效率。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>QuantumultX 的脚本功能能实现哪些高级操作？</h5></div>
-    <div class="panel-body">
-        QuantumultX 支持 JavaScript 脚本，可用于请求重写、数据修改、自动签到、广告拦截等功能。用户可通过脚本中心导入开源脚本，极大增强应用的灵活性与自动化能力。    </div>
+        可调整 Hysteria2 的拥塞控制与重传参数，启用 FEC（前向纠错）并合理设置 MTU 与窗口大小以适应链路特性。还可尝试切换 QUIC 参数或更换中转以减少丢包影响。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -222,16 +222,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-clash-node.htm" title="「10月14日」最高速度20.2M/S，2025年Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月14日」最高速度20.2M/S，2025年Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-26-free-subscribe-node.htm" title="「10月26日」最高速度22.2M/S，2025年Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「10月26日」最高速度22.2M/S，2025年Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-clash-node.htm" title="「10月23日」最高速度19.1M/S，2025年Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月23日」最高速度19.1M/S，2025年Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-8-free-clash-subscribe.htm" title="「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-v2ray.htm" title="「10月24日」最高速度22.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「10月24日」最高速度22.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-ssr-node.htm" title="「10月5日」最高速度21M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月5日」最高速度21M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-4-clash-windows.htm" title="「11月4日」最高速度21.8M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「11月4日」最高速度21.8M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-node-subscribe-links.htm" title="「10月17日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「10月17日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-7-clash-node-daily-updates.htm" title="「11月7日」最高速度19.6M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「11月7日」最高速度19.6M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-31-free-ssr-node.htm" title="「10月31日」最高速度20.4M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点每天更新免费节点订阅链接">「10月31日」最高速度20.4M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-clash-node.htm" title="「10月15日」最高速度18.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月15日」最高速度18.3M/S，2025年V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-high-speed-nodes.htm" title="「10月16日」最高速度21.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「10月16日」最高速度21.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-clash-node-daily-updates.htm" title="「10月12日」最高速度21.7M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接">「10月12日」最高速度21.7M/S，2025年Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-clash-node-daily-updates.htm" title="「10月11日」最高速度21.7M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「10月11日」最高速度21.7M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-shadowrocket-node.htm" title="「10月3日」最高速度22.6M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月3日」最高速度22.6M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="「10月25日」最高速度19.5M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「10月25日」最高速度19.5M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share-links.htm" title="「10月20日」最高速度20.1M/S，2025年SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「10月20日」最高速度20.1M/S，2025年SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-13-clash-node-daily-updates.htm" title="「10月13日」最高速度20.3M/S，2025年Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「10月13日」最高速度20.3M/S，2025年Clash节点/SSR节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +243,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
