--- a/free-nodes/2025-11-5-clash-node.htm
+++ b/free-nodes/2025-11-5-clash-node.htm
@@ -137,42 +137,13 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="clearfix"></div>
 <div class="col-md-12 mt-5">
         <p>上一个：<a href="/free-nodes/2025-11-4-clash-windows.htm">「11月4日」最高速度21.8M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></p>
+        <p>下一个：<a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm">「11月6日」最高速度22.3M/S，2025年SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></p>
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>V2Ray 如何设置多入口实现不同访问控制？</h5></div>
+    <div class="panel-heading"><h5>Mellow 的全局代理如何启用？</h5></div>
     <div class="panel-body">
-        通过定义多个 inbound，对不同端口绑定不同的 tag 并在路由中匹配流量。可针对内网用户、远程用户或特定 IP 段应用不同规则，实现灵活访问控制与流量隔离。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>VMess 的多路复用在短连接环境下有什么优势？</h5></div>
-    <div class="panel-body">
-        多路复用可将多个短连接共享同一 TCP 或 QUIC 隧道，减少重复握手和延迟。适合高频短连接的应用场景，如即时通讯、游戏或网页频繁请求，提升整体响应速度。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Shadowrocket 节点测速结合策略组的作用？</h5></div>
-    <div class="panel-body">
-        Shadowrocket 定期测速节点延迟和丢包率，并结合策略组自动选择最佳节点。保证网页、视频和游戏流量走低延迟节点，提高访问速度和连接稳定性。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>QuantumultX 的重写规则能做什么？</h5></div>
-    <div class="panel-body">
-        重写（Rewrite）可用于修改请求头、屏蔽广告、替换响应内容等。通过正则匹配目标请求可实现页面定制与功能增强，但应谨慎使用以避免影响正常网站加载与安全验证。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>如何在 Windows 上安装 Clash for Windows？</h5></div>
-    <div class="panel-body">
-        在 Windows 上安装 Clash for Windows 十分简单。只需前往官方 GitHub 页面下载最新版安装包，运行安装程序后导入订阅链接或配置文件即可。安装完成后，用户可以通过图形化界面方便地切换节点、编辑规则和控制代理模式。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan-Go 的多路复用（mux）如何开启？</h5></div>
-    <div class="panel-body">
-        Trojan-Go 在配置文件中通过启用 mux 参数即可实现多路复用。此功能允许多个连接共享同一隧道，减少握手延迟并提升整体传输效率，尤其在移动网络中表现出色。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>WinXray 是否支持多订阅源？</h5></div>
-    <div class="panel-body">
-        支持。用户可导入多个订阅 URL，每个订阅源独立管理。通过切换订阅源或合并策略组，可灵活管理节点，实现不同地区或用途的线路分配。<hr />    </div>
+        在 Mellow 中可通过开启 TUN 模式来启用全局代理。启用后，系统的所有流量都会经过代理转发，可实现全面科学上网。需注意系统防火墙可能会提示权限请求。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>VLESS + XTLS 模式在移动网络下表现如何？</h5></div>
@@ -180,14 +151,44 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         XTLS 降低加密开销，减少握手次数，适合高延迟或不稳定的移动网络。结合策略组和多出口节点，可提升访问速度和连接稳定性，确保用户体验流畅。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Mellow 的全局代理如何启用？</h5></div>
+    <div class="panel-heading"><h5>VMess 的多路复用在短连接环境下有什么优势？</h5></div>
     <div class="panel-body">
-        在 Mellow 中可通过开启 TUN 模式来启用全局代理。启用后，系统的所有流量都会经过代理转发，可实现全面科学上网。需注意系统防火墙可能会提示权限请求。<hr />    </div>
+        多路复用可将多个短连接共享同一 TCP 或 QUIC 隧道，减少重复握手和延迟。适合高频短连接的应用场景，如即时通讯、游戏或网页频繁请求，提升整体响应速度。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>WinXray 是否支持多订阅源？</h5></div>
+    <div class="panel-body">
+        支持。用户可导入多个订阅 URL，每个订阅源独立管理。通过切换订阅源或合并策略组，可灵活管理节点，实现不同地区或用途的线路分配。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Trojan-Go 的多路复用（mux）如何开启？</h5></div>
+    <div class="panel-body">
+        Trojan-Go 在配置文件中通过启用 mux 参数即可实现多路复用。此功能允许多个连接共享同一隧道，减少握手延迟并提升整体传输效率，尤其在移动网络中表现出色。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Nekobox 导入 Clash 订阅后规则丢失，可能原因？</h5></div>
     <div class="panel-body">
-        部分客户端在解析订阅时只保留节点信息而忽略 rules 或 proxies-group，建议使用支持完整解析的订阅转换器（如 sub-converter）先将订阅转换为兼容格式再导入，或手动合并规则文件。    </div>
+        部分客户端在解析订阅时只保留节点信息而忽略 rules 或 proxies-group，建议使用支持完整解析的订阅转换器（如 sub-converter）先将订阅转换为兼容格式再导入，或手动合并规则文件。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>V2Ray 如何设置多入口实现不同访问控制？</h5></div>
+    <div class="panel-body">
+        通过定义多个 inbound，对不同端口绑定不同的 tag 并在路由中匹配流量。可针对内网用户、远程用户或特定 IP 段应用不同规则，实现灵活访问控制与流量隔离。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>如何在 Windows 上安装 Clash for Windows？</h5></div>
+    <div class="panel-body">
+        在 Windows 上安装 Clash for Windows 十分简单。只需前往官方 GitHub 页面下载最新版安装包，运行安装程序后导入订阅链接或配置文件即可。安装完成后，用户可以通过图形化界面方便地切换节点、编辑规则和控制代理模式。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>QuantumultX 的重写规则能做什么？</h5></div>
+    <div class="panel-body">
+        重写（Rewrite）可用于修改请求头、屏蔽广告、替换响应内容等。通过正则匹配目标请求可实现页面定制与功能增强，但应谨慎使用以避免影响正常网站加载与安全验证。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Shadowrocket 节点测速结合策略组的作用？</h5></div>
+    <div class="panel-body">
+        Shadowrocket 定期测速节点延迟和丢包率，并结合策略组自动选择最佳节点。保证网页、视频和游戏流量走低延迟节点，提高访问速度和连接稳定性。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -216,16 +217,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-free-shadowrocket-node.htm" title="「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接">「10月10日」最高速度18.6M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-node.htm" title="「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-31-free-ssr-node.htm" title="「10月31日」最高速度20.4M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点每天更新免费节点订阅链接">「10月31日」最高速度20.4M/S，2025年Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-high-speed-nodes.htm" title="「10月16日」最高速度21.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「10月16日」最高速度21.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-free-clash-subscribe.htm" title="「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「10月8日」最高速度21.6M/S，2025年SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-ssr-node.htm" title="「10月5日」最高速度21M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月5日」最高速度21M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-clash-node.htm" title="「10月23日」最高速度19.1M/S，2025年Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月23日」最高速度19.1M/S，2025年Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-26-free-subscribe-node.htm" title="「10月26日」最高速度22.2M/S，2025年Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「10月26日」最高速度22.2M/S，2025年Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="「10月25日」最高速度19.5M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「10月25日」最高速度19.5M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-node-share-links.htm" title="「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-node-subscribe.htm" title="「11月1日」最高速度21.3M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接">「11月1日」最高速度21.3M/S，2025年Shadowrocket节点/SSR节点/Clash节点/Singbox节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="「11月6日」最高速度22.3M/S，2025年SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「11月6日」最高速度22.3M/S，2025年SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-7-clash-node-daily-updates.htm" title="「11月7日」最高速度19.6M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「11月7日」最高速度19.6M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-ssr-subscribe.htm" title="「10月9日」最高速度20.3M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「10月9日」最高速度20.3M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-2-free-v2ray.htm" title="「11月2日」最高速度18.1M/S，2025年V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「11月2日」最高速度18.1M/S，2025年V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="「10月6日」最高速度18M/S，2025年V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「10月6日」最高速度18M/S，2025年V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-24-free-v2ray.htm" title="「10月24日」最高速度22.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「10月24日」最高速度22.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share-links.htm" title="「10月20日」最高速度20.1M/S，2025年SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「10月20日」最高速度20.1M/S，2025年SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-node-subscribe-links.htm" title="「10月17日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「10月17日」最高速度19.2M/S，2025年V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -237,7 +238,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
